--- a/resume/index.html
+++ b/resume/index.html
@@ -99,7 +99,9 @@
 		        </div>
 		        <div class="swiper-slide slide05">
 		        	<h2 class="ani" swiper-animate-effect="fadeIn" swiper-animate-duration="2s" swiper-animate-delay="0.3s">作品展示</h2>
+		        	<div class="slider05-text ani" swiper-animate-effect="fadeIn" swiper-animate-duration="2s" swiper-animate-delay="0.3s">左右滑动查看更多...</div>
 		        	<div class="swiper-container02 works">
+		        		
 					    <div class="swiper-wrapper ani" swiper-animate-effect="fadeIn" swiper-animate-duration="2s" swiper-animate-delay="0.3s">
 					        <div class="swiper-slide works-img"><img src="img/weifuke.jpg"/><span>微付客</span>
 					        	<div class="works-a"><a href="https://gaoenzhen.github.io/resume05/weifuke/">微付客（PC端）</a></div>
